--- a/Admin Panel/css/style.css
+++ b/Admin Panel/css/style.css
@@ -1573,4 +1573,180 @@ body {
   right: 30px;
   background-image: url(../images/info-arrow-back.svg);
 }
+
+.form-container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.toggles {
+  width: 80px;
+  margin: 20px 0;
+  text-align: center;
+  position: relative;
+  display: inline-block;
+  /* GREEN CHECKBOX */
+  /* RED CHECKBOX */
+  /* BLUE CHECKBOX */
+}
+
+.toggles *,
+.toggles *:before,
+.toggles *:after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /*transition*/
+  -webkit-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+  outline: none;
+  font-family: Helvetica Neue, helvetica, arial, verdana, sans-serif;
+}
+
+.toggles .ios-toggle,
+.toggles .ios-toggle:active {
+  position: absolute;
+  z-index: 9;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  border: none;
+  outline: none;
+}
+
+.toggles .checkbox-label {
+  display: block;
+  position: relative;
+  padding: 10px;
+  margin-bottom: 0px;
+  font-size: 12px;
+  line-height: 16px;
+  width: 100%;
+  height: 36px;
+  /*border-radius*/
+  border-radius: 18px;
+  background: #f8f8f8;
+  cursor: pointer;
+}
+
+.toggles .checkbox-label:before {
+  content: '';
+  display: block;
+  position: absolute;
+  z-index: 1;
+  line-height: 34px;
+  text-indent: 40px;
+  height: 30px;
+  width: 30px;
+  /*border-radius*/
+  border-radius: 100%;
+  top: 2.5px;
+  left: 3px;
+  right: auto;
+  background: white;
+  /*box-shadow*/
+  -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2), 0 0 0 2px #dddddd;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2), 0 0 0 2px #dddddd;
+}
+
+.toggles .checkbox-label:after {
+  display: block;
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: -300px;
+  padding: 10px;
+  height: 100%;
+  width: 300px;
+  text-align: right;
+  color: #bfbfbf;
+  white-space: nowrap;
+}
+
+.toggles .ios-toggle:checked + .checkbox-label {
+  /*box-shadow*/
+  -webkit-box-shadow: inset 0 0 0 20px #13bf11, 0 0 0 2px #13bf11;
+  box-shadow: inset 0 0 0 20px #13bf11, 0 0 0 2px #13bf11;
+}
+
+.toggles .ios-toggle:checked + .checkbox-label:before {
+  left: calc(100% - 33px);
+  /*box-shadow*/
+  -webkit-box-shadow: 0 0 0 2px transparent, 0 3px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 0 2px transparent, 0 3px 3px rgba(0, 0, 0, 0.3);
+}
+
+.toggles .ios-toggle:checked + .checkbox-label:after {
+  content: "";
+  background-image: url(../images/check.svg);
+  background-size: 50% auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  left: 47px;
+  width: 30px;
+  z-index: 99;
+  pointer-events: none;
+}
+
+.toggles .toggles_checkbox1 + .checkbox-label {
+  /*box-shadow*/
+  -webkit-box-shadow: inset 0 0 0 0px #2CBF88, 0 0 0 2px #dddddd;
+  box-shadow: inset 0 0 0 0px #2CBF88, 0 0 0 2px #dddddd;
+}
+
+.toggles .toggles_checkbox1:checked + .checkbox-label {
+  /*box-shadow*/
+  -webkit-box-shadow: inset 0 0 0 18px #2CBF88, 0 0 0 2px #2CBF88;
+  box-shadow: inset 0 0 0 18px #2CBF88, 0 0 0 2px #2CBF88;
+}
+
+.toggles .toggles_checkbox1:checked + .checkbox-label:after {
+  color: #2CBF88;
+}
+
+.toggles .toggles_checkbox2 + .checkbox-label {
+  /*box-shadow*/
+  -webkit-box-shadow: inset 0 0 0 0px #f35f42, 0 0 0 2px #dddddd;
+  box-shadow: inset 0 0 0 0px #f35f42, 0 0 0 2px #dddddd;
+}
+
+.toggles .toggles_checkbox2:checked + .checkbox-label {
+  /*box-shadow*/
+  -webkit-box-shadow: inset 0 0 0 20px #f35f42, 0 0 0 2px #f35f42;
+  box-shadow: inset 0 0 0 20px #f35f42, 0 0 0 2px #f35f42;
+}
+
+.toggles .toggles_checkbox2:checked + .checkbox-label:after {
+  color: #f35f42;
+}
+
+.toggles .toggles_checkbox3 + .checkbox-label {
+  /*box-shadow*/
+  -webkit-box-shadow: inset 0 0 0 0px #2CBF88, 0 0 0 2px #dddddd;
+  box-shadow: inset 0 0 0 0px #2CBF88, 0 0 0 2px #dddddd;
+}
+
+.toggles .toggles_checkbox3:checked + .checkbox-label {
+  /*box-shadow*/
+  -webkit-box-shadow: inset 0 0 0 20px #2CBF88, 0 0 0 2px #2CBF88;
+  box-shadow: inset 0 0 0 20px #2CBF88, 0 0 0 2px #2CBF88;
+}
+
+.toggles .toggles_checkbox3:checked + .checkbox-label:after {
+  color: #1fc1c8;
+}
+
+select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-image: url(../images/select_dropdown.png);
+  background-size: 13px;
+  background-repeat: no-repeat;
+  background-position: 90% center;
+  padding-right: 25px;
+}
 /*# sourceMappingURL=style.css.map */
