--- a/Admin Panel/sass/style.scss
+++ b/Admin Panel/sass/style.scss
@@ -1326,71 +1326,275 @@ body {
   }
 }
 
-.show-info-content{
+.show-info-content {
   display: block;
   font-size: 14px;
   margin-bottom: 10px;
-  .show-info-content__title{
+
+  .show-info-content__title {
     display: block;
     font-size: 11px;
     font-weight: 700;
     color: #999;
     text-transform: uppercase;
     font-family: $font;
-    a{
+
+    a {
       position: relative;
-      top:-5px;
+      top: -5px;
       font-size: 13px;
       color: $green;
     }
   }
-  .show-info-content__desc{
+
+  .show-info-content__desc {
     display: block;
     font-size: 14px;
     font-family: $font;
     color: $black;
     font-weight: 800;
-    a{
+
+    a {
       color: $black;
       text-decoration: underline;
     }
   }
 }
 
-.info-slider{
+.info-slider {
   margin-bottom: 10px;
   margin-top: -10px;
   position: relative;
-    .slick-arrow{
-      position: absolute;
-      bottom: -15px;
-      font-size: 0;
-      border: 0;
-      width: 27px;
-      height: 27px;
-      border-radius: 15px;
-      background-repeat: no-repeat;
-      background-size: 7px;
-      background-position: center;
-      outline: none;
-      cursor: pointer;
-      transition: transform .5s ease-in-out;
-      transform-origin: center;
-      &:hover{
-        transform: scale(1.2);
-      }
-      &.slick-next{
-        right: -5px;
-        background-image: url(../images/info-arrow-next.svg);
-      }
-      &.slick-prev{
-        right: 30px;
-        background-image: url(../images/info-arrow-back.svg);
-      }
+
+  .slick-arrow {
+    position: absolute;
+    bottom: -15px;
+    font-size: 0;
+    border: 0;
+    width: 27px;
+    height: 27px;
+    border-radius: 15px;
+    background-repeat: no-repeat;
+    background-size: 7px;
+    background-position: center;
+    outline: none;
+    cursor: pointer;
+    transition: transform .5s ease-in-out;
+    transform-origin: center;
+
+    &:hover {
+      transform: scale(1.2);
     }
+
+    &.slick-next {
+      right: -5px;
+      background-image: url(../images/info-arrow-next.svg);
+    }
+
+    &.slick-prev {
+      right: 30px;
+      background-image: url(../images/info-arrow-back.svg);
+    }
+  }
+}
+
+.form-container {
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 
+
+
+.toggles {
+  width: 80px;
+  margin: 20px 0;
+  text-align: center;
+  position: relative;
+  display: inline-block;
+
+  *,
+  *:before,
+  *:after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /*transition*/
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+    outline: none;
+    font-family: Helvetica Neue, helvetica, arial, verdana, sans-serif;
+  }
+
+  .ios-toggle,
+  .ios-toggle:active {
+    position: absolute;
+    z-index: 9;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    border: none;
+    outline: none;
+  }
+
+  .checkbox-label {
+    display: block;
+    position: relative;
+    padding: 10px;
+    margin-bottom: 0px;
+    font-size: 12px;
+    line-height: 16px;
+    width: 100%;
+    height: 36px;
+    /*border-radius*/
+    -webkit-border-radius: 18px;
+    -moz-border-radius: 18px;
+    border-radius: 18px;
+    background: #f8f8f8;
+    cursor: pointer;
+  }
+
+  .checkbox-label:before {
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: 1;
+    line-height: 34px;
+    text-indent: 40px;
+    height: 30px;
+    width: 30px;
+    /*border-radius*/
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    top: 2.5px;
+    left: 3px;
+    right: auto;
+    background: white;
+    /*box-shadow*/
+    -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, .2), 0 0 0 2px #dddddd;
+    -moz-box-shadow: 0 3px 3px rgba(0, 0, 0, .2), 0 0 0 2px #dddddd;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, .2), 0 0 0 2px #dddddd;
+  }
+
+  .checkbox-label:after {
+    // content: attr(data-off);
+    display: block;
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: -300px;
+    padding: 10px;
+    height: 100%;
+    width: 300px;
+    text-align: right;
+    color: #bfbfbf;
+    white-space: nowrap;
+  }
+
+  .ios-toggle:checked+.checkbox-label {
+    /*box-shadow*/
+    -webkit-box-shadow: inset 0 0 0 20px rgba(19, 191, 17, 1), 0 0 0 2px rgba(19, 191, 17, 1);
+    -moz-box-shadow: inset 0 0 0 20px rgba(19, 191, 17, 1), 0 0 0 2px rgba(19, 191, 17, 1);
+    box-shadow: inset 0 0 0 20px rgba(19, 191, 17, 1), 0 0 0 2px rgba(19, 191, 17, 1);
+  }
+
+  .ios-toggle:checked+.checkbox-label:before {
+    left: calc(100% - 33px);
+    /*box-shadow*/
+    -webkit-box-shadow: 0 0 0 2px transparent, 0 3px 3px rgba(0, 0, 0, .3);
+    -moz-box-shadow: 0 0 0 2px transparent, 0 3px 3px rgba(0, 0, 0, .3);
+    box-shadow: 0 0 0 2px transparent, 0 3px 3px rgba(0, 0, 0, .3);
+  }
+
+  .ios-toggle:checked+.checkbox-label:after {
+    // content: attr(data-on);
+    content: "";
+    background-image: url(../images/check.svg);
+    background-size: 50% auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    left: 47px;
+    width: 30px;
+    z-index: 99;
+    pointer-events: none;
+  }
+
+  /* GREEN CHECKBOX */
+
+  .toggles_checkbox1+.checkbox-label {
+    /*box-shadow*/
+    -webkit-box-shadow: inset 0 0 0 0px #2CBF88, 0 0 0 2px #dddddd;
+    -moz-box-shadow: inset 0 0 0 0px #2CBF88, 0 0 0 2px #dddddd;
+    box-shadow: inset 0 0 0 0px #2CBF88, 0 0 0 2px #dddddd;
+  }
+
+  .toggles_checkbox1:checked+.checkbox-label {
+    /*box-shadow*/
+    -webkit-box-shadow: inset 0 0 0 18px #2CBF88, 0 0 0 2px #2CBF88;
+    -moz-box-shadow: inset 0 0 0 18px #2CBF88, 0 0 0 2px #2CBF88;
+    box-shadow: inset 0 0 0 18px #2CBF88, 0 0 0 2px #2CBF88;
+  }
+
+  .toggles_checkbox1:checked+.checkbox-label:after {
+    color: #2CBF88;
+  }
+
+  /* RED CHECKBOX */
+
+  .toggles_checkbox2+.checkbox-label {
+    /*box-shadow*/
+    -webkit-box-shadow: inset 0 0 0 0px #f35f42, 0 0 0 2px #dddddd;
+    -moz-box-shadow: inset 0 0 0 0px #f35f42, 0 0 0 2px #dddddd;
+    box-shadow: inset 0 0 0 0px #f35f42, 0 0 0 2px #dddddd;
+  }
+
+  .toggles_checkbox2:checked+.checkbox-label {
+    /*box-shadow*/
+    -webkit-box-shadow: inset 0 0 0 20px #f35f42, 0 0 0 2px #f35f42;
+    -moz-box-shadow: inset 0 0 0 20px #f35f42, 0 0 0 2px #f35f42;
+    box-shadow: inset 0 0 0 20px #f35f42, 0 0 0 2px #f35f42;
+  }
+
+  .toggles_checkbox2:checked+.checkbox-label:after {
+    color: #f35f42;
+  }
+
+  /* BLUE CHECKBOX */
+
+  .toggles_checkbox3+.checkbox-label {
+    /*box-shadow*/
+    -webkit-box-shadow: inset 0 0 0 0px #2CBF88, 0 0 0 2px #dddddd;
+    -moz-box-shadow: inset 0 0 0 0px #2CBF88, 0 0 0 2px #dddddd;
+    box-shadow: inset 0 0 0 0px #2CBF88, 0 0 0 2px #dddddd;
+  }
+
+  .toggles_checkbox3:checked+.checkbox-label {
+    /*box-shadow*/
+    -webkit-box-shadow: inset 0 0 0 20px #2CBF88, 0 0 0 2px #2CBF88;
+    -moz-box-shadow: inset 0 0 0 20px #2CBF88, 0 0 0 2px #2CBF88;
+    box-shadow: inset 0 0 0 20px #2CBF88, 0 0 0 2px #2CBF88;
+  }
+
+  .toggles_checkbox3:checked+.checkbox-label:after {
+    color: #1fc1c8;
+  }
+
+}
+
+
+select {
+  appearance: none;
+  background-image: url(../images/select_dropdown.png);
+  background-size: 13px;
+  background-repeat: no-repeat;
+  background-position: 90% center;
+  padding-right: 25px;
+}
 
 
 
