--- a/Frontend/sass/_general.scss
+++ b/Frontend/sass/_general.scss
@@ -150,3 +150,112 @@ sans-serif;
     }
   }
 }
+
+.title-big {
+  font-size: 67px;
+  font-family: $font;
+  font-weight: 700;
+  color: #262626;
+
+  @media(max-width:1200px) {
+    font-size: 50px;
+  }
+
+  @media(max-width:992px) {
+    font-size: 40px;
+  }
+}
+
+.title {
+  font-size: 48px;
+  font-family: $font;
+  font-weight: 500;
+  color: #262626;
+
+  @media(max-width:1200px) {
+    font-size: 38px;
+  }
+
+  @media(max-width:992px) {
+    font-size: 30px;
+  }
+}
+
+.subtitle {
+  font-size: 20px;
+  font-family: $font;
+  color: #4D4D4D;
+  font-weight: 700;
+}
+
+.text {
+  font-size: 18px;
+  font-family: $font;
+  color: #4D4D4D;
+  font-weight: 400;
+
+  p {
+    font-size: 18px;
+    font-family: $font;
+    color: #4D4D4D;
+    font-weight: 400;
+  }
+}
+
+.btn-big {
+  color: #fff;
+  background-color: $green-light;
+  box-shadow: 0 5px 1px #016b71;
+  border: 0 none;
+  border-radius: 100px;
+  font-family: $font;
+  font-weight: bold;
+  line-height: 80px;
+  max-width: 100%;
+  outline: 0;
+  text-transform: uppercase;
+  width: 290px;
+  display: inline-block;
+  text-align: center;
+  font-size: 24px;
+  padding-top: 0;
+  min-height: 80px;
+  -webkit-transition: .2s all ease-in-out;
+  transition: .2s all ease-in-out;
+
+  &:hover {
+    text-decoration: none;
+    background-color: #1c9e52
+  }
+
+  @media(max-width:1200px) {
+    font-size: 18px;
+    line-height: 60px;
+    width: 240px;
+    min-height: 60px;
+  }
+
+
+}
+
+.img-fluid-overlay {
+  width: calc(105%);
+}
+
+.max-width-530 {
+  max-width: 530px !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.max-width-360 {
+  max-width: 360px !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.max-width-830 {
+  max-width: 830px !important;
+  margin-left: auto;
+  margin-right: auto;
+}
